add /user/profile/:id API для получения данных внешнего юзера
